<resources>

    <string name="empty"></string>
    <string name="app_name">Skydive Kompasroos</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_calculate">Skydive kompasroos</string>
    <string name="title_activity_about">About Skydive kompasroos</string>
    <string name="title_activity_canopylist">Skydive kompasroos canopies</string>
    <string name="title_activity_canopydetails">Skydive kompasroos canopy details</string>
    <string name="title_activity_specific_canopy_edit">Skydive kompasroos canopy</string>
    <string name="to_be_replaced">to_be_replaced</string>
    <string name="categorySetting">\nYou\'re in category <b>%1$d</b></string>
    <string name="categorySettingDescription">(%1$s)</string>
    <string name="categoryUnknown">Not set, so cat %1$d</string>
    <string name="canopyAdvise">Valid canopies:\nCategory %1$d, all sizes</string>
    <string name="canopyAdviseWithMinSize">Valid canopies:\nCategory %1$d, min. %2$d sqft</string>
    <string name="ormore">" (or more)"</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_save">Save</string>
    <string name="menu_about">About Skydive kompasroos App</string>
    <string name="menu_sort">Sorting</string>
    <string name="menu_sortbyname">By name</string>
    <string name="menu_sortbymanufacturer">By manufacturer</string>
    <string name="menu_sortbycategory">By category</string>
    <string name="menu_filterCommon">All common canopies</string>
    <string name="menu_filterCommonAround">Common canopies around max. category</string>
    <string name="menu_filterAll">All canopies</string>
    <string name="btnShowCanopyList">Show valid canopies</string>
    <string name="btnMin">" - "</string>
    <string name="btnPlus">" + "</string>
    <string name="btnShareResult">Share result</string>
    <string name="btnShareDetails">Share canopy details</string>
    <string name="btnShareAbout">Share about text</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete</string>
    <string name="calculationWeightLabel">\nExit weight</string>
    <string name="calculationWeightSetting">: %1$d kg (%2$d lbs)</string>
    <string name="calculationTotalJumpsLabel">\nTotal number of jumps</string>
    <string name="calculationTotalJumpsSetting">: %1$d%2$s</string>
    <string name="calculationJumpsLast12MonthsLabel">\nJumps in last 12 months</string>
    <string name="calculationJumpsLast12MonthsSetting">: %1$d%2$s</string>
    <string name="calculationIntrotext">Set the correct number of jumps and your exit weight below, to see which canopies are valid. The button at the top right will show the list.</string>
    <string name="calculationOvertimeWarning">\nBeware: this application is more than 1 year old, and probably not up to date any more!</string>
    <string name="calculationOvertimeUnknownWarning">\nCurrent date or date of this app could not be found. This app may not be up to date any more!</string>
    <string name="calculationCanopyCategoryLabel">Valid canopies:</string>
    <string name="calculationCanopyMinAreaLabel">Minimal area:</string>
    <string name="calculationMaxWingLoadLabel">Maximum wingload:</string>
    <string name="calculationCanopyCategory">Category %1$d</string>
    <string name="calculationCanopyMinArea">%1$d sqft</string>
    <string name="calculationCanopyMinAreaAny">no limit</string>
    <string name="calculationCanopyMaxWingLoad">%1$.1f lbs/sqft</string>
    <string name="calculationCanopyMaxWingLoadAny">no limit</string>
    <string name="canopyType">type</string>
    <string name="canopyManufacturer">manufacturer</string>
    <string name="canopyListCategoryHeader">Category: %1$d</string>
    <string name="wingloadtableheader">\nWingload in lbs/sqft</string>
    <string name="shareaboutsubject">Skydive kompasroos app information</string>
    <string name="sharedetailssubject">Skydive kompasroos canopy data</string>
    <string name="shareresultsubject">Skydive kompasroos result</string>
    <string name="shareresultheaderformat">Your experience (%1$d jumps, of which %2$d in the last 12 months) and exit weight (%3$d kg) make canopies from category %4$d and a minimum area of %5$d sqft valid for you.\n\nSee the list below:\n\n</string>
    <string name="shareresultneededsizenotavailable">Canopies mentioned below would be valid, but are not available in the appropriate size:</string>
    <string name="shareresultnotaccepted">Canopies below are NOT valid, they require more experience:</string>
    <string name="shareresultfooter">\n\n\nSent to you from the Skydive Kompasroos Android app by Digitalica\nhttps://play.google.com/store/apps/details?id=nl.digitalica.skydivekompasroos</string>
    <string name="reset_name_own">You</string>
    <string name="reset_name_friend">A friend</string>
    <string name="reset_name_beginner">A beginner</string>
    <string name="reset_name_intermediate">Intermediate jumper</string>
    <string name="reset_name_skygod">Sky God</string>
    <string name="detailsmanufacturer">Manufacturer:</string>
    <string name="detailsmanufacturercountry">From:</string>
    <string name="detailsUrl">Website:</string>
    <string name="detailsCategory">Category:</string>
    <string name="detailsAdvise">Advice:</string>
    <string name="detailsRemarks">Remarks:</string>
    <string name="detailsCells">Cells:</string>
    <string name="detailsDropzoneId">Dropzone.com:</string>
    <string name="detailsSizes">Sizes:</string>
    <string name="detailsSizesRange">%1$s to %2$s sqft</string>
    <string name="detailsExperience">Required experience:</string>
    <string name="detailsExperienceUnknown">Unknown, as this canopy has no category assigned yet. So it will be handled as category 6: </string>
    <string name="detailsProduction">In production:</string>
    <string name="detailsAdditionalInformationWelcome">More information is welcome, see About page for contact details.</string>
    <string name="saveDialogHeader">Save data as:</string>
    <string name="sortDialogHeader">Sort data:</string>
    <string name="resetDialogHeader">Reset to:</string>
    <string name="filterDialogHeader">Filter list:</string>
    <string name="alternativeCells">%1$s cells</string>
    <string name="alternativeSizes">%1$s to %2$s sqft</string>
    <string name="filterNone">No active filter</string>
    <string name="filterRange">Shown: %1$d of %2$d</string>
    <string name="filterTypeAll">All %1$d canopies shown</string>
    <string name="filterTypeAround">Common, around cat %1$d</string>
    <string name="filterTypeCommon">All common types</string>
    <string name="canopyAdviseAcceptable">This type is valid.</string>
    <string name="canopyAdviseAcceptableWithMinSize">This type is valid, for a minimal area of %1$d sqft.</string>
    <string name="canopyAdviseNeededSizeNotAvailable">NOT valid: category is fine, but required size (%1$d sqft) not available.</string>
    <string name="canopyAdviseCategoryTooHigh">NOT valid: you need at least %1$d more jumps experience.</string>
    <string name="specificcanopiestableheader">\nSpecific Canopies:</string>
    <string name="specificCanopyHeaderSize">Sqft</string>
    <string name="specificCanopyHeaderType">Type</string>
    <string name="specificCanopyHeaderRemarks">Remarks</string>
    <string name="specificCanopyHeaderWingLoad">Wingload</string>
    <string name="specificeditsize">Size (sqft)</string>
    <string name="specificeditsizeerror">Size is no number</string>
    <string name="specificedittype">Type</string>
    <string name="specificeditremarks">Remarks</string>
    <string name="totalNumberOfJumpsDialogTitle">Total number of jumps</string>
    <string name="enterTotalNumberOfJumpsFormat">Range 0-%d</string>
    <string name="numberOfJumpsLast12MonthsDialogTitle">Jumps in last 12 months</string>
    <string name="enterNumberOfJumpsLast12MonthsFormat">Range 0-%d</string>
    <string name="weightDialogTitle">Exit Weight</string>
    <string name="enterWeightFormat">Range %1$d-%2$d</string>

    <string-array name="canopyCategories">
        <item>Unknown</item>
        <item>wingload maximum 1,1; minimal size 170 sqft</item>
        <item>wingload maximum 1,1; minimal size 170 sqft</item>
        <item>wingload maximum 1,3; minimal size 150 sqft</item>
        <item>wingload maximum 1,5; minimal size 135 sqft</item>
        <item>wingload maximum 1,7; minimal size 120 sqft</item>
        <item>no limits</item>
    </string-array>
    <string-array name="jumperCategories">
        <item>Unknown</item>
        <item>Less then 25 jumps or less then 10 jumps in the last 12 months</item>
        <item>25 to 100 jumps; at least 10 jumps in the last 12 months</item>
        <item>100 to 400 jumps; at least 25 jumps in the last 12 months</item>
        <item>400 to 700 jumps; at least 50 jumps in the last 12 months</item>
        <item>700 to 1000 jumps; at least 100 jumps in the last 12 months</item>
        <item>over 1000 jumps</item>
    </string-array>
    <!--
         below is the same array as jumperCategories, but worded differently to use in 
         canopy details screen.
    -->
    <string-array name="neededExperience">
        <item>Unknown</item>
        <item>No experience</item>
        <item>Minimal 25 jumps, of which at least 10 in the last 12 months</item>
        <item>Minimal 100 jumps, of which at least 25 in the last 12 months</item>
        <item>Minimal 400 jumps, of which at least 50 in the last 12 months</item>
        <item>Minimal 700 jumps, of which at least 100 in the last 12 months</item>
        <item>Minimal 1000 jumps</item>
    </string-array>

</resources>