<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveDialogHeader"
        android:textSize="@dimen/bodyText" />

    <Button
        android:id="@+id/buttonOwn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_name_own"
        android:textSize="@dimen/bodyText" />

    <Button
        android:id="@+id/buttonFriend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_name_friend"
        android:textSize="@dimen/bodyText" />

</LinearLayout>