<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortDialogHeader"
        android:textColor="@android:color/white"
        android:textSize="@dimen/bodyText" />

    <RadioGroup
        android:id="@+id/radioGroupFilterOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButtonByName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sortbyname"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bodyText" />

        <RadioButton
            android:id="@+id/radioButtonByManufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sortbymanufacturer"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bodyText" />

        <RadioButton
            android:id="@+id/radioButtonByCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sortbycategory"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bodyText" />
    </RadioGroup>

</LinearLayout>