<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/screen_padding_bottom"
    android:paddingLeft="@dimen/screen_padding_left"
    android:paddingRight="@dimen/screen_padding_right"
    android:paddingTop="@dimen/screen_padding_top" >

    <LinearLayout
        android:id="@+id/tablelayout_filterheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textview_dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/empty"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bodyText" >
        </TextView>
        
        <ImageButton
            android:id="@+id/buttonShareResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/btnShareResult"
            android:src="@android:drawable/ic_menu_share" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/SuzanBackGroundBlue" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_be_replaced"
                android:textSize="@dimen/canopydetailsName" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="1" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewCategoryLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsCategory"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewCategoryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewManufacturerLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsmanufacturer"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewManufacturerText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewManufacturerCountryLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsmanufacturercountry"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewManufacturerCountryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewUrlLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsUrl"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewUrlText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewAdviseLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsAdvise"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewAdviseText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewProductionLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsProduction"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewProductionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewExperienceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="100"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsExperience"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewExperienceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewCellsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsCells"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewCellsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewSizesLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsSizes"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewSizesText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewDropzoneIdLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsDropzoneId"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewDropzoneIdText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewRemarksLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/table_padding_aftercolon"
                        android:text="@string/detailsRemarks"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/textViewRemarksText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_be_replaced"
                        android:textSize="@dimen/bodyText" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>