<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/SuzanBackGroundBlue"
        android:fillViewport="true"
        android:paddingBottom="@dimen/screen_padding_bottom"
        android:paddingLeft="@dimen/screen_padding_left"
        android:paddingRight="@dimen/screen_padding_right"
        android:paddingTop="@dimen/screen_padding_top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewSizeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specificeditsize"
                android:textSize="@dimen/bodyText" />

            <EditText
                android:id="@+id/editTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >
            </EditText>

            <TextView
                android:id="@+id/textViewTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specificedittype"
                android:textSize="@dimen/bodyText" />

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewRemarksLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specificeditremarks"
                android:textSize="@dimen/bodyText" />

            <EditText
                android:id="@+id/editTextRemarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >
            </EditText>

            <requestFocus />
        </LinearLayout>
    </ScrollView>

</LinearLayout>